# STPD-index

./: CMakeLists.txt  README.md
CMakeModules/: ConfigureCompilerClang.cmake  ConfigureCompilerGcc.cmake
data/: toy.reads.fasta  toy.txt
experiments/original-r-index/: CMakeLists.txt  ri-locate.cpp
experiments/original-r-index/internal/: r_index.hpp
include/: CMakeLists.txt
include/bitvectors/: CMakeLists.txt  elias_fano_bitvector.hpp  succinct_bitvector.hpp
include/common/: common.hpp
include/elias_fano/: CMakeLists.txt  elias_fano_intlv.hpp  elias_fano_sux.hpp  interleaved_elias_fano.hpp
include/move_ds/: CMakeLists.txt  move-r.hpp
include/phi_functions/: CMakeLists.txt  move-r_phi_inv.hpp  r-index_phi_inv.hpp  r-index_phi_inv_intlv.hpp  r-index_phi_inv_sux.hpp  stpd-index_phi_inv.hpp
include/stpd_array/: CMakeLists.txt  stpd_array_binary_search.hpp  stpd_array_binary_search_opt.hpp  stpd_array_binary_search_opt_v2.hpp  stpd_array_binary_search_opt_v3.hpp
include/text_oracles/: CMakeLists.txt  bitpacked_text_oracle.hpp
include/text_oracles/RLZ/: CMakeLists.txt  RLZ_DNA.hpp  RLZ_DNA_sux.hpp
interfaces/: compute-STPD-sampling.py
pfp-src/: CMakeLists.txt  bwtparse.c  pfbwt.cpp  pfthreads.hpp
sources/: CMakeLists.txt
sources/path-decomp-src/: CMakeLists.txt  STPD_small_files.cpp  compute_stpd_sampling.cpp  dna_bwt.hpp  dna_string.hpp  include.hpp  lcp.hpp
sources/pfp-src/: pscan.cpp
sources/simplebwt-src/: CMakeLists.txt  simplebwt.cpp
sources/stpd-index-src/: CMakeLists.txt  build_store_stpd_index.cpp  locate.cpp  stpd-index.hpp
toy_data/: yeast_patt_100.fasta
utils/: testing_pipeline.py
